update deployment data for contract artifacts
